src/test/ui/hr-subtype/hr-subtype.free_x_vs_free_x.stderr
warning: lifetime parameter `'z` never used
  --> $DIR/hr-subtype.rs:32:29
   |
LL |           fn subtype<'x,'y:'x,'z:'y>() {
   |                           ----^^
   |                           |
   |                           help: elide the unused lifetime
...
LL | / check! { free_x_vs_free_x: (fn(&'x u32),
LL | |                             fn(&'x u32)) }
   | |__________________________________________- in this macro invocation
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'z` never used
  --> $DIR/hr-subtype.rs:38:31
   |
LL |           fn supertype<'x,'y:'x,'z:'y>() {
   |                             ----^^
   |                             |
   |                             help: elide the unused lifetime
...
LL | / check! { free_x_vs_free_x: (fn(&'x u32),
LL | |                             fn(&'x u32)) }
   | |__________________________________________- in this macro invocation

error: compilation successful
  --> $DIR/hr-subtype.rs:100:1
   |
LL | / fn main() {
LL | |
LL | |
LL | |
LL | |
LL | |
LL | | }
   | |_^

error: aborting due to previous error

